# BotLab-Autonomous-Mobile-Robot

./: .gitignore  README.md
code/mbot_ws/mbot_autonomy/: .gitignore  CMakeLists.txt  README.md
code/mbot_ws/mbot_autonomy/include/planning/: exploration.hpp
code/mbot_ws/mbot_autonomy/include/slam/: action_model.hpp  mapping.hpp  particle_filter.hpp  sensor_model.hpp
code/mbot_ws/mbot_autonomy/logs_data/: odom_log1  odom_log2
code/mbot_ws/mbot_autonomy/src/mbot/: diff_motion_controller.cpp  drive_maze.cpp  drive_square.cpp
code/mbot_ws/mbot_autonomy/src/planning/: astar.cpp  exploration.cpp  frontiers.cpp  motion_planner.cpp
code/mbot_ws/mbot_autonomy/src/slam/: action_model.cpp  mapping.cpp  mapping1.cpp  moving_laser_scan.cpp  particle_filter.cpp  sensor_model.cpp  slam.cpp  slam_main.cpp
code/mbot_ws/mbot_firmware/: .gitignore  .gitmodules
code/mbot_ws/mbot_firmware/data/: odom_log_1.txt  odom_log_2.txt
code/mbot_ws/mbot_firmware/python/: mbot_move_simple.py  mbot_test_drive.py  mbot_test_drive_CLI.py  odom_xy_plotter.py
code/mbot_ws/mbot_firmware/src/: controller.c  controller.h  mbot.c  mbot.h  odometry.c
design/Assembly/: Assembly.aux  Assembly.fdb_latexmk  Assembly.fls  Assembly.tex
design/Engineering drawing/solidworks drawing/: fork.SLDDRW  gear.SLDDRW  motor_holder.SLDDRW  rack.SLDDRW
